minikube/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: goserver-service
spec:
  selector:
    app: goserver
  type: NodePort
  ports:
  - name: goserver-service
    port: 9005
    targetPort: 8000
    nodePort: 30007
    protocol: TCP
